--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 APP_ENV=local
-APP_KEY=SomeRandomString
+APP_KEY=base64:ebThYY9gSEyyJV8rLXr8SQUxl+NeFULtuERatIfC7WA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://mailz
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mongodb
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PORT=27017
+DB_DATABASE=mailz
+DB_USERNAME=
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
